--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<button class="btn">Submit</button>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
